# serializer version: 1
# name: test_buttons[button.roborock_q10_s5_empty_dustbin-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.roborock_q10_s5_empty_dustbin',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Empty dustbin',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Empty dustbin',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'empty_dustbin',
    'unique_id': 'empty_dustbin_q10_duid',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[button.roborock_q10_s5_empty_dustbin-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Roborock Q10 S5+ Empty dustbin',
    }),
    'context': <ANY>,
    'entity_id': 'button.roborock_q10_s5_empty_dustbin',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[button.roborock_s7_2_reset_air_filter_consumable-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.roborock_s7_2_reset_air_filter_consumable',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Reset air filter consumable',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Reset air filter consumable',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'reset_air_filter_consumable',
    'unique_id': 'reset_air_filter_consumable_device_2',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[button.roborock_s7_2_reset_air_filter_consumable-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Roborock S7 2 Reset air filter consumable',
    }),
    'context': <ANY>,
    'entity_id': 'button.roborock_s7_2_reset_air_filter_consumable',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[button.roborock_s7_2_reset_main_brush_consumable-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.roborock_s7_2_reset_main_brush_consumable',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Reset main brush consumable',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Reset main brush consumable',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'reset_main_brush_consumable',
    'unique_id': 'reset_main_brush_consumable_device_2',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[button.roborock_s7_2_reset_main_brush_consumable-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Roborock S7 2 Reset main brush consumable',
    }),
    'context': <ANY>,
    'entity_id': 'button.roborock_s7_2_reset_main_brush_consumable',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[button.roborock_s7_2_reset_sensor_consumable-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.roborock_s7_2_reset_sensor_consumable',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Reset sensor consumable',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Reset sensor consumable',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'reset_sensor_consumable',
    'unique_id': 'reset_sensor_consumable_device_2',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[button.roborock_s7_2_reset_sensor_consumable-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Roborock S7 2 Reset sensor consumable',
    }),
    'context': <ANY>,
    'entity_id': 'button.roborock_s7_2_reset_sensor_consumable',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[button.roborock_s7_2_reset_side_brush_consumable-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.roborock_s7_2_reset_side_brush_consumable',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Reset side brush consumable',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Reset side brush consumable',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'reset_side_brush_consumable',
    'unique_id': 'reset_side_brush_consumable_device_2',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[button.roborock_s7_2_reset_side_brush_consumable-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Roborock S7 2 Reset side brush consumable',
    }),
    'context': <ANY>,
    'entity_id': 'button.roborock_s7_2_reset_side_brush_consumable',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[button.roborock_s7_2_sc1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.roborock_s7_2_sc1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'sc1',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'sc1',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '12_device_2',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[button.roborock_s7_2_sc1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Roborock S7 2 sc1',
    }),
    'context': <ANY>,
    'entity_id': 'button.roborock_s7_2_sc1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[button.roborock_s7_2_sc2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.roborock_s7_2_sc2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'sc2',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'sc2',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '24_device_2',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[button.roborock_s7_2_sc2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Roborock S7 2 sc2',
    }),
    'context': <ANY>,
    'entity_id': 'button.roborock_s7_2_sc2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[button.roborock_s7_maxv_reset_air_filter_consumable-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.roborock_s7_maxv_reset_air_filter_consumable',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Reset air filter consumable',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Reset air filter consumable',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'reset_air_filter_consumable',
    'unique_id': 'reset_air_filter_consumable_abc123',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[button.roborock_s7_maxv_reset_air_filter_consumable-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Roborock S7 MaxV Reset air filter consumable',
    }),
    'context': <ANY>,
    'entity_id': 'button.roborock_s7_maxv_reset_air_filter_consumable',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[button.roborock_s7_maxv_reset_main_brush_consumable-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.roborock_s7_maxv_reset_main_brush_consumable',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Reset main brush consumable',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Reset main brush consumable',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'reset_main_brush_consumable',
    'unique_id': 'reset_main_brush_consumable_abc123',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[button.roborock_s7_maxv_reset_main_brush_consumable-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Roborock S7 MaxV Reset main brush consumable',
    }),
    'context': <ANY>,
    'entity_id': 'button.roborock_s7_maxv_reset_main_brush_consumable',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[button.roborock_s7_maxv_reset_sensor_consumable-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.roborock_s7_maxv_reset_sensor_consumable',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Reset sensor consumable',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Reset sensor consumable',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'reset_sensor_consumable',
    'unique_id': 'reset_sensor_consumable_abc123',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[button.roborock_s7_maxv_reset_sensor_consumable-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Roborock S7 MaxV Reset sensor consumable',
    }),
    'context': <ANY>,
    'entity_id': 'button.roborock_s7_maxv_reset_sensor_consumable',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[button.roborock_s7_maxv_reset_side_brush_consumable-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.roborock_s7_maxv_reset_side_brush_consumable',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Reset side brush consumable',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Reset side brush consumable',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'reset_side_brush_consumable',
    'unique_id': 'reset_side_brush_consumable_abc123',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[button.roborock_s7_maxv_reset_side_brush_consumable-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Roborock S7 MaxV Reset side brush consumable',
    }),
    'context': <ANY>,
    'entity_id': 'button.roborock_s7_maxv_reset_side_brush_consumable',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[button.roborock_s7_maxv_sc1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.roborock_s7_maxv_sc1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'sc1',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'sc1',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '12_abc123',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[button.roborock_s7_maxv_sc1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Roborock S7 MaxV sc1',
    }),
    'context': <ANY>,
    'entity_id': 'button.roborock_s7_maxv_sc1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[button.roborock_s7_maxv_sc2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.roborock_s7_maxv_sc2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'sc2',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'sc2',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '24_abc123',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[button.roborock_s7_maxv_sc2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Roborock S7 MaxV sc2',
    }),
    'context': <ANY>,
    'entity_id': 'button.roborock_s7_maxv_sc2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[button.zeo_one_pause-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.zeo_one_pause',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Pause',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Pause',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'pause',
    'unique_id': 'pause_zeo_duid',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[button.zeo_one_pause-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Zeo One Pause',
    }),
    'context': <ANY>,
    'entity_id': 'button.zeo_one_pause',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[button.zeo_one_shutdown-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.zeo_one_shutdown',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Shutdown',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Shutdown',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'shutdown',
    'unique_id': 'shutdown_zeo_duid',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[button.zeo_one_shutdown-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Zeo One Shutdown',
    }),
    'context': <ANY>,
    'entity_id': 'button.zeo_one_shutdown',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[button.zeo_one_start-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.zeo_one_start',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Start',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Start',
    'platform': 'roborock',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'start',
    'unique_id': 'start_zeo_duid',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[button.zeo_one_start-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Zeo One Start',
    }),
    'context': <ANY>,
    'entity_id': 'button.zeo_one_start',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
